--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "sass-loader": "^12.4.0"
   },
   "dependencies": {
-    "gsap": "^3.13.0",
-    "swiper": "^11.2.8"
+    "@glidejs/glide": "^3.7.1",
+    "gsap": "^3.13.0"
   }
 }
