Added MusicPLZ case study base files

--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -19,7 +19,7 @@
       "releaseYear": "2024",
       "imageUrl": "assets/images/musicplz.webp",
       "siteUrl": "https://gabriel-manciu.be/projets/musicplz",
-      "caseStudyUrl": "https://exemple.com/case-study"
+      "caseStudyUrl": "case/musicplz.html"
     },
     {
       "name": "EminenceRP",
